// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create new app 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore
        },
        {
            name: .eslintrc.js
        },
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js
                },
                {
                    name: setup.js
                }
            ]
        },
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: fonts.css
                        },
                        {
                            name: style.css
                        }
                    ]
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: SansForgetica-Regular.eot
                        },
                        {
                            name: SansForgetica-Regular.svg
                        },
                        {
                            name: SansForgetica-Regular.ttf
                        },
                        {
                            name: SansForgetica-Regular.woff
                        },
                        {
                            name: SansForgetica-Regular.woff2
                        }
                    ]
                },
                {
                    name: images,
                    children: [
                        {
                            name: blank_canvas.png
                        },
                        {
                            name: preferences.png
                        }
                    ]
                },
                {
                    name: index.html
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep
                        }
                    ]
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep
                        }
                    ]
                }
            ]
        },
        {
            name: babel.config.js
        },
        {
            name: package.json
        },
        {
            name: postcss.config.js
        },
        {
            name: source,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js
                        },
                        {
                            name: body.js
                        },
                        {
                            name: footer.js
                        },
                        {
                            name: header.js
                        }
                    ]
                },
                {
                    name: main.js
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js
                        },
                        {
                            name: mn.redux.state.js
                        }
                    ]
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js
                        }
                    ]
                }
            ]
        },
        {
            name: webpack.config.js
        }
    ]
}
"
`;

exports[`Create new app 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:es\\": \\"webpack\\",
        \\"watch:es\\": \\"watch 'npm run build:es' ./source\\",
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' ./source\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./output\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\",
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./output --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./output\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli output/assets\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run dashboard\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\",
        \\"prestart\\": \\"npm run build:es\\",
        \\"start\\": \\"npm-run-all --parallel watch:es watch:css serve\\",
        \\"serve\\": \\"browser-sync start --server ./output --files ./output --port 4669\\"
    },
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"setupFilesAfterEnv\\": [
            \\"<rootDir>/__tests__/setup.js\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"main\\": \\"./source/main.js\\"
}
"
`;

exports[`Create new app 3`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:lit/recommended'
    ],
    parser: 'babel-eslint',
    plugins: [
        'lit'
    ]
};"
`;

exports[`Create new project 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore
        },
        {
            name: .eslintrc.js
        },
        {
            name: babel.config.js
        },
        {
            name: package.json
        },
        {
            name: source,
            children: []
        }
    ]
}
"
`;

exports[`Create new react app 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore
        },
        {
            name: .eslintrc.js
        },
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js
                },
                {
                    name: setup.js
                }
            ]
        },
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: fonts.css
                        },
                        {
                            name: style.css
                        }
                    ]
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: SansForgetica-Regular.eot
                        },
                        {
                            name: SansForgetica-Regular.svg
                        },
                        {
                            name: SansForgetica-Regular.ttf
                        },
                        {
                            name: SansForgetica-Regular.woff
                        },
                        {
                            name: SansForgetica-Regular.woff2
                        }
                    ]
                },
                {
                    name: images,
                    children: [
                        {
                            name: preferences.png
                        },
                        {
                            name: react.png
                        }
                    ]
                },
                {
                    name: index.html
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep
                        }
                    ]
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep
                        }
                    ]
                }
            ]
        },
        {
            name: babel.config.js
        },
        {
            name: package.json
        },
        {
            name: postcss.config.js
        },
        {
            name: source,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: App.js
                        },
                        {
                            name: Body.js
                        },
                        {
                            name: Footer.js
                        },
                        {
                            name: Header.js
                        }
                    ]
                },
                {
                    name: main.js
                }
            ]
        },
        {
            name: webpack.config.js
        }
    ]
}
"
`;

exports[`Create new react app 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:es\\": \\"webpack\\",
        \\"watch:es\\": \\"webpack-dev-server --hot --open --mode development\\",
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' ./source\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./output\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\",
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./output --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./output\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli output/assets\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run dashboard\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\",
        \\"start\\": \\"npm-run-all build:es --parallel watch:*\\"
    },
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"setupFilesAfterEnv\\": [
            \\"<rootDir>/__tests__/setup.js\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"main\\": \\"./source/main.js\\"
}
"
`;

exports[`Create new react app 3`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    plugins: [
        'jsx-a11y'
    ],
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    settings: {
        react: {
            version: '16.2'
        }
    }
};"
`;

exports[`Create new server 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .env
        },
        {
            name: .eslintignore
        },
        {
            name: .eslintrc.js
        },
        {
            name: .gitignore
        },
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js
                }
            ]
        },
        {
            name: config,
            children: [
                {
                    name: default.js
                },
                {
                    name: test.js
                }
            ]
        },
        {
            name: favicon.ico
        },
        {
            name: graphql.js
        },
        {
            name: index.js
        },
        {
            name: package.json
        },
        {
            name: public,
            children: [
                {
                    name: example.md
                },
                {
                    name: index.html
                }
            ]
        },
        {
            name: server.js
        },
        {
            name: socket.js
        },
        {
            name: ssl,
            children: [
                {
                    name: server.cert
                },
                {
                    name: server.key
                }
            ]
        }
    ]
}
"
`;

exports[`Create new server 2`] = `
"{
    \\"name\\": \\"tomo-server\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"Node.js HTTP(S), WebSocket, and GraphQL servers with an 80% solution for security 'baked in'\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' .\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\",
        \\"predev\\": \\"npm run open\\",
        \\"dev\\": \\"stmux [ \\\\\\"nodemon index.js\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\",
        \\"prestart\\": \\"npm audit\\",
        \\"start\\": \\"node index.js\\",
        \\"open\\": \\"open-cli http://localhost:8111\\"
    },
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"main\\": \\"index.js\\"
}
"
`;

exports[`Create new server 3`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: false,
        node: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    plugins: [
        'jsx-a11y'
    ],
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    settings: {
        react: {
            version: '16.2'
        }
    }
};"
`;
